# news_mcp_server

./: .env.example  README.md  pyproject.toml
src/news_mcp_server/: __init__.py  news.py  providers.py  server.py
tests/: conftest.py  test_news.py  test_server_tools.py
